# sonnet

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5SonnetConfig.cmake.in  KF6SonnetConfig.cmake.in  Mainpage.dox  README  README.md  metainfo.yaml  sonnet.categories
autotests/: CMakeLists.txt  test_autodetect.cpp  test_core.cpp  test_core.h  test_filter.cpp  test_filter.h  test_highlighter.cpp  test_settings.cpp  test_settings.h  test_suggest.cpp
cmake/: FindHUNSPELL.cmake
data/: CMakeLists.txt  gentrigrams.cpp  parsetrigrams.cpp  trigrams.qrc.in
data/trigrams/: eo
docs/: Doxyfile.local  index.docbook
examples/: CMakeLists.txt  configdialog.cpp  dialogexample.cpp  dialogexample.h  dictionarycombobox.cpp  highlighterexample.cpp  highlighterexample.h  plaintextedit.cpp  textedit.cpp
po/af/: sonnet5_qt.po
po/ar/: sonnet5_qt.po
po/as/: sonnet5_qt.po
po/ast/: sonnet5_qt.po
po/az/: sonnet5_qt.po
po/be/: sonnet5_qt.po
po/be@latin/: sonnet5_qt.po
po/bg/: sonnet5_qt.po
po/bn/: sonnet5_qt.po
po/bn_IN/: sonnet5_qt.po
po/br/: sonnet5_qt.po
po/bs/: sonnet5_qt.po
po/ca/: sonnet5_qt.po
po/ca@valencia/: sonnet5_qt.po
po/crh/: sonnet5_qt.po
po/cs/: sonnet5_qt.po
po/csb/: sonnet5_qt.po
po/cy/: sonnet5_qt.po
po/da/: sonnet5_qt.po
po/de/: sonnet5_qt.po
po/el/: sonnet5_qt.po
po/en_GB/: sonnet5_qt.po
po/eo/: sonnet5_qt.po
po/es/: sonnet5_qt.po
po/et/: sonnet5_qt.po
po/eu/: sonnet5_qt.po
po/fa/: sonnet5_qt.po
po/fi/: sonnet5_qt.po
po/fr/: sonnet5_qt.po
po/fy/: sonnet5_qt.po
po/ga/: sonnet5_qt.po
po/gd/: sonnet5_qt.po
po/gl/: sonnet5_qt.po
po/gu/: sonnet5_qt.po
po/ha/: sonnet5_qt.po
po/he/: sonnet5_qt.po
po/hi/: sonnet5_qt.po
po/hne/: sonnet5_qt.po
po/hr/: sonnet5_qt.po
po/hsb/: sonnet5_qt.po
po/hu/: sonnet5_qt.po
po/hy/: sonnet5_qt.po
po/ia/: sonnet5_qt.po
po/id/: sonnet5_qt.po
po/is/: sonnet5_qt.po
po/it/: sonnet5_qt.po
po/ja/: sonnet5_qt.po
po/ka/: sonnet5_qt.po
po/kk/: sonnet5_qt.po
po/km/: sonnet5_qt.po
po/kn/: sonnet5_qt.po
po/ko/: sonnet5_qt.po
po/ku/: sonnet5_qt.po
po/lb/: sonnet5_qt.po
po/lt/: sonnet5_qt.po
po/lv/: sonnet5_qt.po
po/mai/: sonnet5_qt.po
po/mk/: sonnet5_qt.po
po/ml/: sonnet5_qt.po
po/mr/: sonnet5_qt.po
po/ms/: sonnet5_qt.po
src/: CMakeLists.txt  Messages.sh  rc.cpp
src/core/: CMakeLists.txt  backgroundchecker.cpp  backgroundchecker.h  backgroundchecker_p.h  backgroundengine.cpp  backgroundengine_p.h  client.cpp  client_p.h  core_debug.cpp  filter.cpp  filter_p.h  globals.cpp  globals.h  guesslanguage.cpp  guesslanguage.h  languagefilter.cpp  languagefilter_p.h  loader.cpp  loader_p.h  settings.cpp  settings.h  settings_p.h  settingsimpl.cpp  settingsimpl_p.h  sonnet-core.pro  sonnetcore.qdocconf  speller.cpp  speller.h  spellerplugin.cpp  spellerplugin_p.h  textbreaks.cpp  textbreaks_p.h  tokenizer.cpp  tokenizer_p.h
src/plugins/: CMakeLists.txt
src/plugins/aspell/: CMakeLists.txt  aspell_debug.cpp  aspell_debug.h  aspellclient.cpp  aspellclient.h  aspelldict.cpp  aspelldict.h  kspell_aspellclient.cpp  kspell_aspellclient.h  kspell_aspelldict.cpp
src/plugins/enchant/: CMakeLists.txt  enchantclient.cpp  enchantclient.h  enchantdict.cpp  enchantdict.h
src/plugins/hspell/: CMakeLists.txt  hspell_debug.cpp  hspell_debug.h  hspellclient.cpp  hspellclient.h  hspelldict.cpp  hspelldict.h  kspell_hspellclient.cpp  kspell_hspellclient.h  kspell_hspelldict.cpp  kspell_hspelldict.h
src/plugins/hunspell/: CMakeLists.txt  hunspellclient.cpp  hunspellclient.h  hunspelldebug.cpp  hunspelldict.cpp  hunspelldict.h  kspell_hunspellclient.cpp  kspell_hunspellclient.h  kspell_hunspelldict.cpp
src/plugins/ispellchecker/: CMakeLists.txt  ispellcheckerclient.cpp  ispellcheckerclient.h  ispellcheckerdict.cpp  ispellcheckerdict.h
src/plugins/nsspellchecker/: CMakeLists.txt  nsspellcheckerclient.h  nsspellcheckerclient.mm  nsspellcheckerdict.h  nsspellcheckerdict.mm
src/plugins/voikko/: CMakeLists.txt  voikkoclient.cpp  voikkoclient.h  voikkodebug.cpp  voikkodebug.h  voikkodict.cpp  voikkodict.h
src/quick/: CMakeLists.txt  ConfigPage.qml  Messages.sh  plugins.qmltypes  qmldir  qmldir.license  qmlfiles.qrc  sonnetquick.qdocconf  sonnetquickplugin.cpp  sonnetquickplugin.h  spellcheckhighlighter.cpp  spellcheckhighlighter.h  types.h
src/ui/: CMakeLists.txt  configdialog.cpp  configdialog.h  configui.ui  configview.cpp  configview.h  configwidget.cpp  configwidget.h  dialog.cpp  dialog.h  dictionarycombobox.cpp  dictionarycombobox.h  highlighter.cpp  highlighter.h  sonnet-ui.pro  sonnetui.qdocconf  sonnetui.ui  spellcheckdecorator.cpp  spellcheckdecorator.h  ui_debug.cpp  ui_debug.h
src/ui/designer/: CMakeLists.txt
src/unicode/parseucd/: parseucd.cpp
tests/: CMakeLists.txt  backgroundtest.cpp  backgroundtest.h  test.cpp  test_configdialog.cpp  test_dialog.cpp  test_dialog.h  test_dictionarycombobox.cpp  test_highlighter.cpp  test_highlighter.h  test_textedit.cpp
tier1/sonnet/: CMakeLists.txt  KF5SonnetConfig.cmake.in  Mainpage.dox
tier1/sonnet/autotests/: test_core.cpp  test_filter.cpp
tier1/sonnet/docs/: index.docbook
tier1/sonnet/src/core/: backgroundchecker.cpp  backgroundchecker.h  backgroundengine_p.h  client.cpp  filter.cpp  filter_p.h  globals.h  loader.cpp  loader_p.h  settings_p.h  spellerplugin.cpp  spellerplugin_p.h
tier1/sonnet/src/plugins/aspell/: kspell_aspellclient.cpp  kspell_aspelldict.h
tier1/sonnet/src/plugins/enchant/: CMakeLists.txt  enchantclient.cpp  enchantclient.h  enchantdict.cpp  enchantdict.h
tier1/sonnet/src/plugins/hspell/: CMakeLists.txt  kspell_hspelldict.cpp  kspell_hspelldict.h
tier1/sonnet/src/plugins/hunspell/: CMakeLists.txt  kspell_hunspelldict.h
tier1/sonnet/src/ui/: CMakeLists.txt  configdialog.h  dialog.h  dictionarycombobox.cpp  spellcheckdecorator.h
tier1/sonnet/src/unicode/: CMakeLists.txt  README
tier1/sonnet/src/unicode/parseucd/: parseucd.cpp
tier1/sonnet/tests/: backgroundtest.cpp  test_dictionarycombobox.cpp  test_highlighter.h
(+275 files in other folders)
